added questions javascript, finished customization and made function to start buttons.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-I am the captain now! 
-who are you?
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -77,13 +76,15 @@ who are you?
             <p>Your score is 5/5, Great Job!</p>
         </div>
         <div class="enter-intial">
-            <p>Enter Initials</p>
-            <textarea class="highscore-initial" cols="20" rows="1"></textarea>
+            <p>Enter Initials:</p>
+            <textarea class="highscore-initial" cols="15" rows="0"></textarea>
             <div class="submit">
                 <button class="submit-btn">Submit</button>
             </div>
         </div>
     </div>
+
+    <script src="script.js"></script>
 
 </body>
 
