created more functionality to selected answers, made all buttons functional.

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         </header>
         <section>
             <div class="question-text">
-                <span>What object would you use for a list of names?</span>
+                <!-- <span>What object would you use for a list of names?</span> -->
             </div>
             <div class="option-list">
-                <div class="option">
+                <!-- <div class="option">
                     <span> Function </span>
                 </div>
                 <div class="option">
@@ -56,14 +56,14 @@
                 </div>
                 <div class="option">
                     <span> Variable </span>
-                </div>
+                </div> -->
             </div>
         </section>
 
         <!-- Quiz Footer -->
         <footer>
             <div class="total-questions">
-                <span><p>1</p><p>/</p><p>5</p><p>Questions</p></span>
+                <!-- <span><p>1</p><p>/</p><p>5</p><p>Questions</p></span> -->
             </div>
             <button class="next-btn">Next Question</button>
         </footer>
@@ -85,6 +85,7 @@
     </div>
 
     <script src="script.js"></script>
+    <script src="questions.js"></script>
 
 </body>
 
